syntax = "proto3";

package api.admin;

import "enum.proto";

option go_package = "github.com/aide-family/moon/api/admin;admin";
option java_multiple_files = true;
option java_package = "api.admin";

// 此处定义admin下所有的基础model

message SelectExtend {
  // 图标
  string icon = 1;
  // 颜色
  string color = 2;
  // 描述
  string remark = 3;
  // 图片URL
  string image = 4;
}

// 下拉选择基础数据
message Select {
  // 数据值
  uint32 value = 1;
  // 数据label
  string label = 2;
  // 子级数据, 针对级联选择
  repeated Select children = 3;
  // 是否禁用
  bool disabled = 4;
  // 针对有图标类型的配置项(可选，默认为null)
  optional SelectExtend extend = 5;
}

// 用户模块
message User {
  // 用户id
  uint32 id = 1;
  // 用户名
  string name = 2;
  // 昵称
  string nickname = 3;
  // 邮箱
  string email = 4;
  // 手机
  string phone = 5;
  // 状态
  Status status = 6;
  // 性别
  Gender gender = 7;
  // 角色
  Role role = 8;
  // 头像
  string avatar = 9;
  // 个人说明
  string remark = 10;
  // 创建时间
  string created_at = 11;
  // 更新时间
  string updated_at = 12;
}

// 系统API资源模块
message ResourceItem {
  // 接口ID
  uint32 id = 1;
  // 接口名称
  string name = 2;
  // 接口路径
  string path = 3;
  // 接口状态
  Status status = 4;
  // 备注
  string remark = 5;
  // 创建时间
  string createdAt = 6;
  // 更新时间
  string updatedAt = 7;
  // 删除时间
  string deletedAt = 8;
  // 所属模块
  ModuleType module = 9;
  // 所属领域
  DomainType domain = 10;
}

// 系统菜单模块
message Menu {
  // 菜单ID
  uint32 id = 1;
  // 菜单名称
  string name = 2;
  // 菜单路径
  string path = 3;
  // 菜单图标
  string icon = 4;
  // 菜单状态
  Status status = 5;
  // 父级菜单
  uint32 parent_id = 6;
  // 创建时间
  string created_at = 7;
  // 更新时间
  string updated_at = 8;
  // 菜单层级
  int32 level = 9;
  // 菜单子级数据
  repeated Menu children = 10;
}

// 团队成员
message TeamMember {
  // 用户ID
  uint32 user_id = 1;
  // 成员ID
  uint32 id = 2;
  // 角色
  Role role = 3;
  // 状态
  Status status = 4;
  // 创建时间
  string created_at = 5;
  // 更新时间
  string updated_at = 6;
  // 用户明细
  User user = 7;
}

// 团队模块
message Team {
  // 团队ID
  uint32 id = 1;
  // 团队名称
  string name = 2;
  // 团队状态
  Status status = 3;
  // 团队描述
  string remark = 4;
  // 创建时间
  string created_at = 5;
  // 更新时间
  string updated_at = 6;
  // 负责人
  User leader = 7;
  // 创建者
  User creator = 8;
  // 团队LOGO
  string logo = 9;
  // 管理员（不包含创建者， 因为创建者不一定是管理员，但是包含负责人）
  repeated TeamMember admin = 10;
}

// 团队角色模块
message TeamRole {
  // 角色ID
  uint32 id = 1;
  // 角色名称
  string name = 2;
  // 角色描述
  string remark = 3;
  // 创建时间
  string created_at = 4;
  // 更新时间
  string updated_at = 5;
  // 状态
  Status status = 6;
  // 资源列表
  repeated ResourceItem resources = 7;
}

// 数据源模块
message Datasource {
  // 数据源ID
  uint32 id = 1;
  // 数据源名称
  string name = 2;
  // 数据源类型
  DatasourceType type = 3;
  // 数据源地址
  string endpoint = 4;
  // 状态
  Status status = 5;
  // 创建时间
  string created_at = 6;
  // 更新时间
  string updated_at = 7;
  // 配置信息
  map<string, string> config = 8;
  // 描述
  string remark = 9;
  // 存储器类型
  StorageType storage_type = 10;
}

// 查询到的数据详情， 用与元数据构建
message MetricDetail {
  // 指标名称
  string name = 1;
  // 帮助信息
  string help = 2;
  // 类型
  MetricType type = 3;
  // 标签集合
  repeated MetricLabel labels = 4;
  // 指标单位
  string unit = 5;
  // ID
  uint32 id = 6;
}

// 指标数据标签
message MetricLabel {
  // 标签名称
  string name = 1;
  // 标签值
  repeated MetricLabelValue values = 2;
  // ID
  uint32 id = 3;
}

// 指标数据标签值
message MetricLabelValue {
  // ID
  uint32 id = 1;
  // 值
  string value = 2;
}

message Dict{
  // ID
  uint32 id = 1;

  // 字典名称
  string name = 2;
  // 字典类型
  DictType dict_type = 3;

  //颜色类型
  string color_type =4;

  // 字典值
  string value = 5;

  //图标
  string icon=6;

//图片url
  string image_url=7;

  // 状态
  Status status = 8;

  //语言
  string language_code=9;

  //字典备注
  string remark=10;

  // 创建时间
  string created_at = 11;
  // 更新时间
  string updated_at = 12;

}